feat: Adds logging to my-home application